--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile files('libs/universal-image-loader-1.9.3.jar')
     compile files('libs/android-support-v4.jar')
     compile files('libs/shimmer.jar')
+    compile files('libs/Parse-1.9.2.jar')
+    compile files('libs/bolts-android-1.2.0.jar')
 }
